Fix Styling Issue
- margin was forcing a scrollbar when not needed

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ html {
 
 body {
     min-height: 100vh;
-    margin: 1em;
+    margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -24,6 +24,10 @@ main {
 
 a {
     text-decoration: none;
+}
+
+header {
+    margin-top: 1em;
 }
 
 header img {
@@ -76,6 +80,7 @@ main.buttons div p {
 
 footer {
     margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 /* shake animation */
